python/testData/inspections/PyUnresolvedReferencesInspection/UnusedUnresolvedNameImportedSeveralTimes/a.py
from my_module import <error descr="Cannot find reference 'eggs' in 'my_module'">eggs</error>
from my_module import <error descr="Cannot find reference 'eggs' in 'my_module'">eggs</error>
